Fix footer layout bug on safari

--- a/netbox/static/netbox/css/footer.scss
+++ b/netbox/static/netbox/css/footer.scss
@@ -16,6 +16,9 @@
   &__row {
     display: flex;
     flex-wrap: wrap;
+    &:before {
+      display: none;
+    }
   }
 
   &__img-col {
